--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,24 +1,10 @@
 .hero {
   width: 100%;
-  // height: calc(100dvh - 50px); // Adjusted for header height
-  height: 100dvh;
+  height: 100vh;
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
-  // background-color: #33333394;
   position: relative;
-
-  // &::before {
-  //   content: "";
-  //   position: absolute;
-  //   top: 0;
-  //   left: 0;
-  //   width: 100%;
-  //   height: 100%;
-  //   background-color: #33333394;
-  //   filter: brightness(0.1);
-  //   z-index: 1;
-  // }
 
   .container {
     z-index: 2;
@@ -41,7 +27,6 @@
     object-fit: cover;
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
-    // filter: blur(3px);
 
     &.loaded {
       opacity: 1;
@@ -71,7 +56,6 @@
 
     .bordered {
       border-width: 0 2px;
-      /* Верх-низ: 0px, Ліво-право: 1px */
       border-style: solid;
       border-color: #BCD2F270;
     }
@@ -89,6 +73,7 @@
     }
 
     h1 {
+      color: #fff;
       font-size: 96px;
       font-weight: bold;
       line-height: 80px;
@@ -150,5 +135,23 @@
     position: absolute;
     bottom: 0px;
     width: 100%;
+  }
+}
+
+.button-widget{
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 20;
+
+  svg{
+    width: 30px;
   }
 }
