--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -5,6 +5,10 @@
   padding-bottom: 80px;
   font-size: 14px;
 
+  svg{
+    width: 40px;
+  }
+
   .container {
     max-width: 1200px;
     margin: 0 auto;
@@ -19,9 +23,10 @@
 
     .footer-section {
       h4 {
-        font-size: 14px;
+        font-size: 18px;
+        font-weight: 600;
         margin-bottom: 10px;
-        color: #ffcc00;
+        color: #0056b3;
       }
 
       ul {
@@ -38,7 +43,7 @@
           transition: color 0.3s;
 
           &:hover {
-            color: #ffcc00;
+            color: #0056b3;
           }
         }
       }
@@ -48,7 +53,7 @@
         gap: 10px;
 
         a {
-          color: #ffcc00;
+          color: #0056b3;
           font-size: 20px;
           transition: transform 0.3s, color 0.3s;
 
@@ -68,7 +73,7 @@
     padding-top: 15px;
 
     a {
-      color: #ffcc00;
+      color: #0056b3;
       text-decoration: none;
       transition: color 0.3s;
 
