--- a/src/app/pages/home/reviews/reviews.component.scss
+++ b/src/app/pages/home/reviews/reviews.component.scss
@@ -1,8 +1,9 @@
 .container {
   // max-width: 800px;
   margin: 0 auto;
-  background: #fff;
-  border-radius: 8px;
+  // background: #fff;
+  background-color: #335183;
+  // border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
