--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="relative">
-  <button class="button-primary button-widget">
+  <a href="#contact-form" class="button-primary button-widget wobble-hor-bottom">
     <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
       <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
       <g
@@ -26,7 +26,7 @@
         ></path>
       </g>
     </svg>
-  </button>
+  </a>
 
   <section>
     <div class="hero dark">
@@ -76,15 +76,15 @@
           <img src="./assets/img/hero_decoration.png" class="hero_decoration" />
         </div>
 
-        <div class="cta_box flex flex-col gap-1">
-          <button class="button-primary">Забронювати</button>
-          <p>Встигни забронювати до квітня - економія 200є</p>
+        <div class="cta_box flex flex-col gap-1 mb-10">
+          <a class="button-primary" href="#contact-form">Забронювати</a>
+          <p style="text-shadow: 1px 4px 7px black;">Встигни забронювати до квітня - економія 500є</p>
         </div>
       </div>
 
       <img src="./assets/img/sand_gradient.png" class="sand_gradient" />
-      <img src="./assets/img/palm_leaf.png" class="hero_decoration_palm" />
-      <img src="./assets/img/palm_leaf.png" class="hero_decoration_palm_2" />
+      <img src="./assets/img/palm_leaf.png" class="hero_decoration_palm wobble-ver-left" />
+      <img src="./assets/img/palm2.png" class="hero_decoration_palm_2 wobble-ver-right" />
     </div>
   </section>
 
