--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -121,6 +121,7 @@
     bottom: -20px;
     width: 180px;
     left: -50px;
+    z-index: 30;
   }
 
   .hero_decoration_palm_2 {
@@ -128,7 +129,7 @@
     bottom: -20px;
     width: 180px;
     right: -50px;
-    transform: rotateY(180deg);
+    z-index: 30;
   }
 
   .sand_gradient{
