--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,22 +13,22 @@
       [modules]="swiperConfig.modules"
       [navigation]="false"
     >
-    <swiper-slide *ngFor="let slide of slides" class="tranding-slide">
+      <swiper-slide *ngFor="let slide of slides" class="tranding-slide">
+        <img *ngIf="slide.img" [src]="slide.img" alt="" />
+        <video *ngIf="slide.video" [src]="slide.video" controls></video>
 
-      <img *ngIf="slide.img" [src]="slide.img" alt="" />
-      <video *ngIf="slide.video" [src]="slide.video" controls></video>
-
-      <div class="text">
-        {{ slide.text }}
-      </div>
-    </swiper-slide>
+        <div class="text">
+          {{ slide.text }}
+        </div>
+      </swiper-slide>
     </swiper-container>
   </section>
 
-  <img src="./assets/img/cloud.png" class="cloud" />
+  <img src="./assets/img/cloud.png" class="cloud cloud-animation" />
+  <img src="./assets/img/cloud.png" class="cloud2" />
 </div>
 
-<div class="whats-be container sky pb-2 pt-40">
+<div class="whats-be container sky pb-40 pt-40">
   <h2>Програма ретриту:</h2>
   <div class="flex flex-col gap-1">
     <div *ngFor="let day of days" class="accordion-item border rounded-lg">
@@ -47,33 +47,49 @@
   </div>
 </div>
 
-<section class="py-16 px-4 sand">
+<section class="py-16 px-4 sky">
   <div class="max-w-6xl mx-auto text-center">
-    <h2 class="text-3xl md:text-4xl font-bold text-sky mb-10">Що на тебе чекає?</h2>
+    <h2 class="text-3xl md:text-4xl font-bold text-sky mb-10">
+      Що на тебе чекає?
+    </h2>
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-2">
-      <div class="p-6 bg-white shadow-lg rounded-2xl text-center hover:scale-105 transition transform">
-        <h3 class="text-xl font-semibold text-sky">Трансформаційні практики</h3>
-        <p class="mt-2 text-gray-700">Йога, медитації, психологічні розстановки та енергетичні сесії.</p>
+      <div class="p-6 bg-white shadow-lg rounded-2xl transition transform">
+        <h3 class="text-xl font-semibold text-sky">
+          Трансформаційні практики 🧘‍♀️
+        </h3>
+        <p class="mt-2 text-gray-700">
+          Йога, медитації, психологічні розстановки та енергетичні сесії.
+        </p>
       </div>
-      <div class="p-6 bg-white shadow-lg rounded-2xl text-center hover:scale-105 transition transform">
-        <h3 class="text-xl font-semibold text-sky">Місця сили</h3>
-        <p class="mt-2 text-gray-700">Океан, храми, джунглі, рисові тераси та священні джерела Балі.</p>
+      <div class="p-6 bg-white shadow-lg rounded-2xl transition transform">
+        <h3 class="text-xl font-semibold text-sky">Місця сили 🌊</h3>
+        <p class="mt-2 text-gray-700">
+          Океан, храми, джунглі, рисові тераси та священні джерела Балі.
+        </p>
       </div>
-      <div class="p-6 bg-white shadow-lg rounded-2xl text-center hover:scale-105 transition transform">
-        <h3 class="text-xl font-semibold text-sky">Перезавантаження тіла</h3>
+      <div class="p-6 bg-white shadow-lg rounded-2xl transition transform">
+        <h3 class="text-xl font-semibold text-sky">Перезавантаження тіла 💆‍♀️</h3>
         <p class="mt-2 text-gray-700">Масажі, ритуали очищення, SPA.</p>
       </div>
-      <div class="p-6 bg-white shadow-lg rounded-2xl text-center hover:scale-105 transition transform">
-        <h3 class="text-xl font-semibold text-sky">Натхнення та свобода</h3>
-        <p class="mt-2 text-gray-700">Відпочинок на найкращих пляжах, прогулянки та фотосесії.</p>
+      <div class="p-6 bg-white shadow-lg rounded-2xl transition transform">
+        <h3 class="text-xl font-semibold text-sky">Натхнення та свобода 🌞</h3>
+        <p class="mt-2 text-gray-700">
+          Відпочинок на найкращих пляжах, прогулянки та фотосесії.
+        </p>
       </div>
-      <div class="p-6 bg-white shadow-lg rounded-2xl text-center hover:scale-105 transition transform">
-        <h3 class="text-xl font-semibold text-sky">Смачне життя</h3>
-        <p class="mt-2 text-gray-700">Екзотичні фрукти, вечеря з морепродуктами на заході сонця, атмосферні ресторани.</p>
+      <div class="p-6 bg-white shadow-lg rounded-2xl transition transform">
+        <h3 class="text-xl font-semibold text-sky">Смачне життя 🍍</h3>
+        <p class="mt-2 text-gray-700">
+          Екзотичні фрукти, вечеря з морепродуктами на заході сонця, атмосферні
+          ресторани.
+        </p>
       </div>
-      <div class="p-6 bg-white shadow-lg rounded-2xl text-center hover:scale-105 transition transform">
-        <h3 class="text-xl font-semibold text-sky">Нові знайомства</h3>
-        <p class="mt-2 text-gray-700">Коло однодумців, з якими можна поділитися досвідом і зарядитися енергією.</p>
+      <div class="p-6 bg-white shadow-lg rounded-2xl transition transform">
+        <h3 class="text-xl font-semibold text-sky">Нові знайомства 🤝</h3>
+        <p class="mt-2 text-gray-700">
+          Коло однодумців, з якими можна поділитися досвідом і зарядитися
+          енергією.
+        </p>
       </div>
     </div>
   </div>
@@ -118,41 +134,55 @@
   </div>
 </div> -->
 
-<div class="its-for-you container sky h-screen py-2">
-  <h2>де будемо жити:</h2>
+<div
+  class="its-for-you hotel container sky py-6 flex flex-col items-center justify-center"
+>
+  <h2>Де будемо жити:</h2>
 
-  <section class="py-10">
-    <swiper-container
-      [effect]="swiperConfig.effect"
-      [grabCursor]="swiperConfig.grabCursor"
-      [centeredSlides]="swiperConfig.centeredSlides"
-      [slidesPerView]="swiperConfig.slidesPerView"
-      [loop]="swiperConfig.loop"
-      [slideToClickedSlide]="swiperConfig.slideToClickedSlide"
-      [coverflowEffect]="swiperConfig.coverflowEffect"
-      class="swiperContainer"
-      [modules]="swiperConfig.modules"
-      [navigation]="false"
+  <p class="dark hotel opacity-70">
+    <b>Наші критерії готелю: </b>
+  </p>
+  <div class="dark hotel mb-3 p-4 w-full">
+    <ul class="">
+      <li>Лакшері атмосфера</li>
+      <li>Свій басейн</li>
+      <li>Сучасний спортивний зал</li>
+      <li>Ресторан з вишуканою кухнею</li>
+      <li>Безкоштовний Wi-Fi для всіх гостей</li>
+      <li>Зручне розташування</li>
+    </ul>
+  </div>
+
+  <swiper-container
+    [effect]="swiperConfig.effect"
+    [grabCursor]="swiperConfig.grabCursor"
+    [centeredSlides]="swiperConfig.centeredSlides"
+    [slidesPerView]="swiperConfig.slidesPerView"
+    [loop]="swiperConfig.loop"
+    [slideToClickedSlide]="swiperConfig.slideToClickedSlide"
+    [coverflowEffect]="swiperConfig.coverflowEffect"
+    class="swiperContainer shadow-lg rounded-2xl transition transform"
+    [modules]="swiperConfig.modules"
+    [navigation]="false"
+  >
+    <swiper-slide
+      class="tranding-slide_"
+      *ngFor="let i of [].constructor(12); let j = index"
     >
-      <swiper-slide class="tranding-slide"
-        >1
-        <img src="./assets/img/hero-bg.jpg" alt="" />
-      </swiper-slide>
-      <swiper-slide class="tranding-slide"
-        >2
-        <img src="./assets/img/hero-bg.jpg" alt="" />
-      </swiper-slide>
-      <swiper-slide class="tranding-slide"
-        >3
-        <img src="./assets/img/hero-bg.jpg" alt="" />
-      </swiper-slide>
-      <swiper-slide class="tranding-slide"
-        >4
-        <img src="./assets/img/hero-bg.jpg" alt="" />
-      </swiper-slide>
-    </swiper-container>
-  </section>
+      <img [src]="'./assets/img/hotel/' + (j + 1) + '.jpg'" />
+    </swiper-slide>
+  </swiper-container>
 
+  <div class="hotel flex flex-col gap-2 text-white pb-40 dark">
+    <div class="p-2">
+      <p class="mt-2 hotel-info">
+        Ми оберемо готель коли зберенься група з 11 людей, щоб мати можливість
+        врахувати останні зміни в доступних варіантах, а також підібрати
+        найкращі умови для нашого проживання. А також це запбезпечить що всі
+        учасниці будуть проживати разом в одному готелі."
+      </p>
+    </div>
+  </div>
   <img src="./assets/img/cloud.png" class="cloud" />
 </div>
 
@@ -175,6 +205,131 @@
   </div>
 </div>
 
-<app-contact-form />
+<div
+  class="whats-included container sand py-32"
+  style="
+    background-image: url('assets/img/bg2.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+  "
+>
+  <h2 class="text-3xl md:text-4xl font-bold text-sky text-center mb-10">
+    Що входить у вартість?
+  </h2>
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-2">
+    <div class="p-6 bg-white shadow-lg rounded-2xl transition transform">
+      <h3 class="text-xl font-semibold text-sky">Проживання</h3>
+      <p class="mt-2 text-gray-700">
+        Комфортні номери в готелі з усіма зручностями.
+      </p>
+    </div>
+    <div class="p-6 bg-white shadow-lg rounded-2xl transition transform">
+      <h3 class="text-xl font-semibold text-sky">Харчування</h3>
+      <p class="mt-2 text-gray-700">Смачні та корисні сніданки.</p>
+    </div>
+    <div class="p-6 bg-white shadow-lg rounded-2xl transition transform">
+      <h3 class="text-xl font-semibold text-sky">Трансфер</h3>
+      <p class="mt-2 text-gray-700">
+        Зустріч в аеропорту та перевезення до готелю.
+      </p>
+    </div>
+    <div class="p-6 bg-white shadow-lg rounded-2xl transition transform">
+      <h3 class="text-xl font-semibold text-sky">Екскурсії</h3>
+      <p class="mt-2 text-gray-700">
+        Відвідування мальовничих місць та культурних пам’яток.
+      </p>
+    </div>
+    <div class="p-6 bg-white shadow-lg rounded-2xl transition transform">
+      <h3 class="text-xl font-semibold text-sky">Практики та тренінги</h3>
+      <p class="mt-2 text-gray-700">
+        Йога, медитації, психологічні сесії та групові зустрічі.
+      </p>
+    </div>
+    <div class="p-6 bg-white shadow-lg rounded-2xl transition transform">
+      <h3 class="text-xl font-semibold text-sky">Фото- та відеозйомка</h3>
+      <p class="mt-2 text-gray-700">
+        Професійні фото та відео на пам’ять про подорож.
+      </p>
+    </div>
+  </div>
+</div>
+
+<div class="retreat-pricing container sand py-16">
+  <h2 class="text-3xl md:text-4xl font-bold text-sky text-center mb-10">
+    Вартість ретриту
+  </h2>
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-2">
+    <div class="p-6 bg-white shadow-lg rounded-2xl transition transform">
+      <h3 class="text-xl font-semibold text-sky">Ціна за 11 днів</h3>
+      <p class="mt-2 text-gray-700">2550$</p>
+      <b>2050$ за умови раннього бронювання (до 1 травня)</b>
+    </div>
+    <div class="p-6 bg-white shadow-lg rounded-2xl transition transform">
+      <h3 class="text-xl font-semibold text-sky">Аванс</h3>
+      <p class="mt-2 text-gray-700">
+        500$ (також можна розбити наступні платежі по 500 доларів)
+      </p>
+    </div>
+    <div class="p-6 bg-white shadow-lg rounded-2xl transition transform">
+      <h3 class="text-xl font-semibold text-sky">Додаткові витрати</h3>
+      <p class="mt-2 text-gray-700">
+        Авіаквитки, обіди та вечері, особисті витрати, додаткові SPA-процедури,
+        віза(приблизно 40 євро)
+      </p>
+    </div>
+    <div class="p-6 bg-white shadow-lg rounded-2xl transition transform">
+      <h3 class="text-xl font-semibold text-red-500">Увага</h3>
+      <p class="mt-2 text-gray-700"></p>
+
+      <div class="accordion-item border rounded-lg">
+        <button
+          (click)="isOpenHotelInfo = !isOpenHotelInfo"
+          class="accordion-header w-full text-left p-4 font-semibold bg-gray-100"
+        >
+          Організатори можуть вносити зміни до програми
+        </button>
+        <div
+          *ngIf="isOpenHotelInfo"
+          class="accordion-content p-4 border-t bg-white"
+        >
+          <ul class="list-disc list-inside space-y-2">
+            <li>
+              <b>Адаптація до обставин</b> – Ми прагнемо забезпечити найкращий
+              досвід для всіх учасників, тому можливі коригування у розкладі
+              відповідно до погодних умов, логістичних нюансів або форс-мажорних
+              ситуацій.
+            </li>
+            <li>
+              <b>Гнучкість для комфорту учасників</b> – Ми уважно спостерігаємо
+              за вашими потребами та енергією групи, тому можемо внести зміни,
+              щоб забезпечити комфорт і гармонійний ритм ретриту.
+            </li>
+            <li>
+              <b>Покращення програми</b> – Якщо ми бачимо можливість зробити
+              вашу подорож ще більш наповненою, ми можемо додати або змінити
+              активності, зберігаючи загальну концепцію та цінність ретриту.
+            </li>
+            <li>
+              <b>Зовнішні фактори</b> – Деякі активності залежать від роботи
+              партнерів (ресторанів, готелів, транспорту, інструкторів), і в
+              разі необхідності ми можемо запропонувати рівноцінну або навіть
+              кращу альтернативу.
+            </li>
+            <li>
+              <b>Безпека та благополуччя</b> – Ми слідкуємо за безпекою та
+              благополуччям усіх учасників, тому можемо коригувати розклад з
+              урахуванням ситуації, щоб зробити вашу подорож максимально
+              приємною.
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div id="contact-form" class="flex justify-center items-center h-screen sky">
+  <app-contact-form />
+</div>
 
 <app-reviews />
