--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="relative">
-  <a href="#contact-form" class="button-primary button-widget wobble-hor-bottom">
+  <a href="https://www.instagram.com/viktorika7/" class="button-primary button-widget wobble-hor-bottom">
     <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
       <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
       <g
@@ -26,6 +26,10 @@
         ></path>
       </g>
     </svg>
+  </a>
+
+  <a  (click)="scrollToContact()" class="button-primary button-widget-2 wobble-hor-bottom">
+    <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#fff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M21.0039 12C21.0039 16.9706 16.9745 21 12.0039 21C9.9675 21 3.00463 21 3.00463 21C3.00463 21 4.56382 17.2561 3.93982 16.0008C3.34076 14.7956 3.00391 13.4372 3.00391 12C3.00391 7.02944 7.03334 3 12.0039 3C16.9745 3 21.0039 7.02944 21.0039 12Z" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> <path d="M8.40499 13.975C8.44031 13.7985 8.45796 13.7102 8.49025 13.6279C8.51891 13.5548 8.55608 13.4853 8.60098 13.421C8.65157 13.3484 8.71523 13.2848 8.84255 13.1574L13 9C13.5523 8.44772 14.4477 8.44772 15 9C15.5523 9.55228 15.5523 10.4477 15 11L10.8426 15.1574C10.7152 15.2848 10.6516 15.3484 10.579 15.399C10.5147 15.4439 10.4452 15.4811 10.3721 15.5097C10.2898 15.542 10.2015 15.5597 10.025 15.595L8 16L8.40499 13.975Z" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
   </a>
 
   <section>
@@ -67,18 +71,17 @@
 
         <div class="hero-title flex flex-col">
           <p class="mx-2">
-            11 днів для глибокого відновлення, <br />
-            натхнення та перезавантаження
+            Ти мрієш - ми виконуємо!
           </p>
           <h1>Ретрит на Балі</h1>
-          <p class="with-bg mt-1 mx-2">Наберись сил разом з нами</p>
+          <p class="with-bg mt-1 mx-2">Це дешевше ніж ти думаєш!</p>
 
           <img src="./assets/img/hero_decoration.png" class="hero_decoration" />
         </div>
 
         <div class="cta_box flex flex-col gap-1 mb-10">
-          <a class="button-primary" href="#contact-form">Забронювати</a>
-          <p style="text-shadow: 1px 4px 7px black;">Встигни забронювати до квітня - економія 500є</p>
+          <a class="button-primary" (click)="scrollToContact()">Забронювати</a>
+          <p style="text-shadow: 1px 4px 7px black;">Встигни до 14 квітня - економія 500є</p>
         </div>
       </div>
 
