--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,8 @@
 .hero {
   width: 100%;
   height: 100vh;
+  min-height: 720px;
+  max-height: 880px;
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
@@ -151,6 +153,25 @@
   align-items: center;
   justify-content: center;
   z-index: 20;
+
+  svg{
+    width: 30px;
+  }
+}
+
+.button-widget-2{
+  position: fixed;
+  right: 20px;
+  bottom: 80px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 20;
+  animation-delay: 3s;
 
   svg{
     width: 30px;
