--- a/src/app/shared/components/contact-form/contact-form.component.html
+++ b/src/app/shared/components/contact-form/contact-form.component.html
@@ -1,5 +1,6 @@
 <div class="container contact-form-container">
-  <h2 class="text-2xl font-bold mb-4">Замовити дзвінок {{ message }}</h2>
+  <h2 class="text-2xl font-bold mb-4">Замовити зворотній звязок </h2>
+  <p>{{ message }}</p>
 
   <form [formGroup]="contactForm" (ngSubmit)="onSubmit()" *ngIf="!isSent">
     <div class="form-group">
@@ -21,8 +22,8 @@
     </div>
 
     <div class="form-group">
-      <label for="phone">Номер телефону</label>
-      <input id="phone" formControlName="phone" type="text" class="input" />
+      <label for="phone">Cпосіб зв'язатись з вами (Номер, посилання на інст, тг, ватсап)</label>
+      <input id="phone" formControlName="phone" type="text" class="input" placeholder="Номер телефону або соц мережі"/>
       <div
         *ngIf="
           contactForm.get('phone')?.invalid && contactForm.get('phone')?.touched
@@ -30,9 +31,8 @@
         class="error"
       >
         <small *ngIf="contactForm.get('phone')?.hasError('required')"
-          >Номер телефону є обов'язковим.</small
+          >Це поле є обов'язковим.</small
         >
-        <!-- <small *ngIf="contactForm.get('phone')?.hasError('pattern')">Введіть правильний номер телефону (10 цифр).</small> -->
       </div>
     </div>
 
@@ -45,6 +45,8 @@
         rows="5"
       ></textarea>
     </div>
+
+    <p class="p-2 my-2 text-white text-xs">Натискаючи ви автоматично надаєте згоду на обробку ваших даних</p>
 
     <div
       class="loader-container w-full flex items-center justify-center"
@@ -69,7 +71,6 @@
       <div class="flex" *ngIf="!loading">Відправити</div>
 
       <div class="loader-container" *ngIf="loading">
-        <!-- From Uiverse.io by JesusRafaelNavaCruz -->
         <div class="loader"></div>
       </div>
     </button>
